@@ -1,4 +1,9 @@
 
+2007-07-28  Benno Schulenberg  <benno@vertaalt.nl>
+
+	* lib/po.py, bin/tp-robot: Do not take just the first author line,
+	but all of them, in preparation for some better diagnostics.
+
 2007-07-27  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* lib/localweb.py: Put columns in the translators table in order of
